@@ -28,7 +28,7 @@ __PACKAGE__->attributes(
     'content_type', 'content_length',
     'body',         'id',
     'uploads',      'headers', 'path_info',
-    'ajax',         'body_is_parsed',
+    'ajax',         'body_is_parsed',  'is_forward',
     @http_env_keys,
 );
 
@@ -103,6 +103,7 @@ sub init {
     $self->{params}         = {};
     $self->{body}           = '';
     $self->{body_is_parsed} ||= 0;
+    $self->{is_forward}     ||= 0;
     $self->{content_length} = $self->env->{CONTENT_LENGTH} || 0;
     $self->{content_type}   = $self->env->{CONTENT_TYPE} || '';
     $self->{id}             = ++$count;
@@ -159,7 +160,7 @@ sub forward {
     my $env = $request->env;
     $env->{PATH_INFO} = $to_data->{to_url};
 
-    my $new_request = $class->new(env => $env, body_is_parsed => 1);
+    my $new_request = $class->new(env => $env, body_is_parsed => 1, is_forward => 1);
     my $new_params  = _merge_params(scalar($request->params),
                                     $to_data->{params} || {});
 
